fix: fix align table in types of plans

--- a/src/assets/scss/modules/_tables.scss
+++ b/src/assets/scss/modules/_tables.scss
@@ -417,6 +417,10 @@
       height: 16px;
     }
 
+    td:first-child {
+      width: 250px;
+    }
+
     tr:last-child {
       border-bottom: none;
     }
